# AlphaSpike

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: batch_scan_from_opz.py
src/: __init__.py
src/alphaspike/: cache.py  cli.py  db.py  scanner.py
src/backtest/: __init__.py  backtest.py  cli.py
src/common/: cli_utils.py  config.py  logging.py  redis.py  returns.py
src/datahub/: 2026.csv  cache.py  clear_cache.py  daily_bar.py  db.py  main.py  sse.xls  symbol.py  szse.xlsx  trading_calendar.py  tushare.py
src/feature/: bbc.py  bullish_cannon.py  consolidation_breakout.py  four_edge.py  high_retracement.py  registry.py  utils.py  volume_stagnation.py  volume_upper_shadow.py  volume_upper_shadow_opz.py  volume_upper_shadow_v2.py  weak_to_strong.py
src/feature/four_edge/: __init__.py  edge1.py  edge2.py  edge3.py  edge4.py  helpers.py
src/feature_engineering/: __init__.py  __main__.py  analysis.py  cli.py  db.py  extractor.py  pipeline.py
src/track/: __init__.py  cli.py  tracker.py
tests/: conftest.py  test_backtest.py  test_bbc_real.py  test_benchmark.py  test_bullish_cannon_real.py  test_cache_real.py  test_cli_feature_filter.py  test_consolidation_breakout_real.py  test_daily_bar.py  test_db.py  test_edge_cases.py  test_feature_db.py  test_four_edge.py  test_high_retracement_real.py  test_symbol.py  test_trading_calendar.py  test_tushare.py  test_volume_stagnation_real.py  test_volume_upper_shadow_real.py  test_weak_to_strong.py
